--- a/web/package.json
+++ b/web/package.json
@@ -29,7 +29,7 @@
     "typescript": "^5.1.6",
     "unocss": "^0.55.0",
     "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.16.5",
+    "unplugin-icons": "0.18.5",
     "unplugin-vue-components": "^0.25.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
@@ -53,5 +53,8 @@
       "@unocss",
       ".eslint-global-variables.json"
     ]
+  },
+  "overrides": {
+    "unplugin-icons": "0.18.5"
   }
 }
