--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,41 @@
-# GymBro AI Endpoint 所需的最小化配置示例
+# GymBro API 配置示例
 # 复制为 .env 后按环境替换占位内容
 
-# OpenAI 兼容服务基础地址（可指向自建反向代理）
-OPENAI_API_BASE_URL=https://api.openai.com/v1/chat/completions
-# 默认使用的上游模型 ID
-OPENAI_API_MODEL=gpt-4o-mini
-# 调用上游模型所需的密钥
-OPENAI_API_KEY=sk-your-openai-key
-# 服务端向上游请求的超时时间（秒）
-OPENAI_TIMEOUT_SECONDS=60
-# 默认系统 Prompt JSON 文件路径（支持相对路径）
-OPENAI_PROMPT_PATH=docs/prompts/standard.json
+# 应用基本配置
+APP_NAME=GymBro API
+APP_DESCRIPTION=GymBro 对话与认证服务
+APP_VERSION=0.1.0
+DEBUG=false
+
+# CORS 配置
+CORS_ALLOW_ORIGINS=*
+CORS_ALLOW_METHODS=*
+CORS_ALLOW_HEADERS=*
+CORS_ALLOW_CREDENTIALS=true
+
+# HTTPS 和主机配置
+ALLOWED_HOSTS=*
+FORCE_HTTPS=false
+
+# Supabase 配置
+SUPABASE_PROJECT_ID=your-project-id
+SUPABASE_JWKS_URL=https://your-project-id.supabase.co/.well-known/jwks.json
+SUPABASE_ISSUER=https://your-project-id.supabase.co
+SUPABASE_AUDIENCE=your-project-id
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+SUPABASE_CHAT_TABLE=chat_messages
+
+# JWT 配置
+JWKS_CACHE_TTL_SECONDS=900
+JWT_LEEWAY_SECONDS=30
+
+# HTTP 配置
+HTTP_TIMEOUT_SECONDS=10.0
+SSE_HEARTBEAT_SECONDS=15.0
+TRACE_HEADER_NAME=x-trace-id
+
+# AI 服务配置
+AI_PROVIDER=openai
+AI_MODEL=gpt-4o-mini
+AI_API_BASE_URL=https://api.openai.com/v1
+AI_API_KEY=your-openai-api-key
