--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,11 +64,14 @@ dependencies = [
     "typer==0.15.1",
     "typing-extensions==4.12.2",
     "ujson==5.10.0",
-    "uvloop==0.21.0",
     "watchfiles==1.0.4",
     "websockets==14.1",
     "pyproject-toml>=0.1.0",
     "uvloop==0.21.0 ; sys_platform != 'win32'",
+    "supabase>=2.0.0",
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "sse-starlette>=1.6.0",
 ]
 
 [tool.black]
