--- a/.env
+++ b/.env
@@ -27,9 +27,9 @@ PUBLISHABLE_KEY=sb_publishable_YZnz-6LhPqUyBF9eEXZcbQ_QjRW5VnT
 SECRET_KEY=sb_secret_JZba0OSzvqEYVJADziEazg_HG3u57I3
 
 SUPABASE_PROJECT_ID=rykglivrwzcykhhnxwoz
-SUPABASE_JWKS_URL=https://rykglivrwzcykhhnxwoz.supabase.co/auth/v1/.well-known/jwks.json
-# 使用 JWKS URL 动态获取密钥，注释掉静态 JWK 配置
-# SUPABASE_JWK={"kty":"oct","alg":"HS256","use":"sig","k":"c2Jfc2VjcmV0X0paYmEwT1N6dnFFWVZKQUR6aUVhemdfSEczdTU3STM"}
+# SUPABASE_JWKS_URL=https://rykglivrwzcykhhnxwoz.supabase.co/auth/v1/.well-known/jwks.json
+# 使用静态 JWK 配置（JWKS URL 无法访问时的备用方案）
+SUPABASE_JWK={"kty":"oct","alg":"HS256","use":"sig","k":"SlpiYTBPU3p2cUVZVkpBRHppRWF6Z19IRzN1NTdJMw=="}
 SUPABASE_ISSUER=https://rykglivrwzcykhhnxwoz.supabase.co/auth/v1
 SUPABASE_AUDIENCE=authenticated
 SUPABASE_CHAT_TABLE=chat_messages
@@ -40,6 +40,10 @@ SUPABASE_JWT_SECRET=JZba0OSzvqEYVJADziEazg_HG3u57I3
 # JWT 配置
 JWKS_CACHE_TTL_SECONDS=900
 JWT_LEEWAY_SECONDS=30
+# JWT 验证硬化配置（±120秒时钟偏移容忍）
+JWT_CLOCK_SKEW_SECONDS=120
+JWT_MAX_FUTURE_IAT_SECONDS=120
+JWT_REQUIRE_NBF=false
 
 # HTTP 配置
 HTTP_TIMEOUT_SECONDS=10.0
