--- a/requirements.txt
+++ b/requirements.txt
@@ -58,3 +58,8 @@ uvicorn==0.34.0
 uvloop==0.21.0; sys_platform != 'win32'
 watchfiles==1.0.4
 websockets==14.1
+aiohttp>=3.12.15
+prometheus-client>=0.23.1
+requests>=2.32.5
+sse-starlette>=3.0.2
+supabase>=2.21.1
