--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "predev": "node ./scripts/kill-port.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
