--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "prettier": "npx prettier --write ."
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@iconify/json": "^2.2.228",
     "@iconify/vue": "^4.1.1",
     "@unocss/eslint-config": "^0.55.0",
@@ -21,6 +22,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
+    "echarts": "^6.0.0",
     "eslint": "^8.46.0",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
