feat: add database and service health check scripts
- Implemented `check_database.py` to verify database tables and user data.
- Created `check_services.py` to check the status of backend and frontend services.
- Added `inject_token_to_browser.html` for JWT token injection into localStorage.
- Introduced `quick_test_jwt.py` for quick JWT validation from clipboard or command line.
- Developed `test_jwks_keys.py` to test JWKS key loading and ES256 support.
- Enhanced `tmp_decode_supabase_keys.py` to decode Supabase keys from environment variables.
- Added `tmp_find_correct_secret.py` to find the correct JWT secret by testing candidates.
- Created `tmp_verify_es256_jwt.py` for verifying Supabase ES256 JWT tokens.
- Implemented `tmp_verify_service_role_key.py` to validate Supabase SERVICE_ROLE_KEY.
- Updated `ws_debug.log` to reflect recent WebSocket activity.

--- a/.env
+++ b/.env
@@ -27,9 +27,10 @@ PUBLISHABLE_KEY=sb_publishable_YZnz-6LhPqUyBF9eEXZcbQ_QjRW5VnT
 SECRET_KEY=sb_secret_JZba0OSzvqEYVJADziEazg_HG3u57I3
 
 SUPABASE_PROJECT_ID=rykglivrwzcykhhnxwoz
-# SUPABASE_JWKS_URL=https://rykglivrwzcykhhnxwoz.supabase.co/auth/v1/.well-known/jwks.json
+# 方案 B：启用 JWKS URL（如果无法获取 JWT Secret）
+SUPABASE_JWKS_URL=https://rykglivrwzcykhhnxwoz.supabase.co/auth/v1/.well-known/jwks.json
 # 使用静态 JWK 配置（JWKS URL 无法访问时的备用方案）
-SUPABASE_JWK={"kty":"oct","alg":"HS256","use":"sig","k":"SlpiYTBPU3p2cUVZVkpBRHppRWF6Z19IRzN1NTdJMw=="}
+# SUPABASE_JWK={"kty":"oct","alg":"HS256","use":"sig","k":"SlpiYTBPU3p2cUVZVkpBRHppRWF6Z19IRzN1NTdJMw=="}
 SUPABASE_ISSUER=https://rykglivrwzcykhhnxwoz.supabase.co/auth/v1
 SUPABASE_AUDIENCE=authenticated
 SUPABASE_CHAT_TABLE=chat_messages
@@ -44,6 +45,8 @@ JWT_LEEWAY_SECONDS=30
 JWT_CLOCK_SKEW_SECONDS=120
 JWT_MAX_FUTURE_IAT_SECONDS=120
 JWT_REQUIRE_NBF=false
+# 允许的 issuer 列表（支持 Supabase 内部密钥的 "supabase" issuer）
+JWT_ALLOWED_ISSUERS=supabase
 
 # HTTP 配置
 HTTP_TIMEOUT_SECONDS=10.0
